--- a/Lab03/Composite + FlyWeight/Composite/Composite + FlyWeight.csproj
+++ b/Lab03/Composite + FlyWeight/Composite/Composite + FlyWeight.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClickLogger.cs" />
     <Compile Include="ElementFlyweight.cs" />
     <Compile Include="ElementFlyweightFactory.cs" />
+    <Compile Include="IEventListener.cs" />
     <Compile Include="LightElementNode.cs" />
     <Compile Include="LightHTMLParser.cs" />
     <Compile Include="LightNode.cs" />
