--- a/Lab04/Mediator/Mediator/Mediator.csproj
+++ b/Lab04/Mediator/Mediator/Mediator.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aircraft.cs" />
+    <Compile Include="CommandCentre.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runway.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
